<resources>
    <string-array name="security_questions">
        <item>Select a security question...</item>
        <item>What was the name of your first pet?</item>
        <item>What is your mother\'s maiden name?</item>
        <item>What was the name of your primary school?</item>
        <item>In what city were you born?</item>
        <item>What is your favorite book?</item>
    </string-array>
    <string name="app_name">D2D</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="pizza">Pizza</string>
    <string name="burgers">Burgers</string>
    <string name="drinks">Drinks</string>
    <string name="dessert">Dessert</string>
    <string name="frequent_order">Frequent order</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="spicy_beef">Spicy Beef</string>
    <string name="spicy_beef_burger">Spicy Beef Burger</string>
    <string name="r14_99">R14.99</string>
    <string name="juicy_chicken_burger">Juicy Chicken Burger</string>
    <string name="r24_99">R24.99</string>
    <string name="r39_99">R39.99</string>
    <string name="_2_double_beef_burger">2 Double Beef Burger</string>
    <string name="black_spicy_burger">Black Spicy Burger</string>
    <string name="r17_99">R17.99</string>
    <string name="create_a_new_accout">Create a new accout</string>
    <string name="please_fill_in_the_form_to_continue">Please fill in the form to continue</string>
    <string name="fullname">Fullname</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="have_an_account">Have an account?</string>
    <string name="search">Search</string>
    <string name="select_restaurant">Select restaurant</string>
    <string name="sandton_hazelwood_rd">Sandton, Hazelwood Rd</string>
    <string name="braamfontein_juta_st">Braamfontein, Juta St</string>
    <string name="takeaway_orders">Takeaway orders</string>
    <string name="deluxe_meat_chips_combo"><![CDATA[Deluxe Meat & Chips Combo]]></string>
    <string name="the_mega_braai_feast">The Mega Braai Feast</string>
    <string name="flame_grilled_beef_veggie_kebabs"><![CDATA[Flame-Grilled Beef & Veggie Kebabs]]></string>
    <string name="cilantro_lime_prawns">Cilantro Lime Prawns</string>
    <string name="drinks_beverages"><![CDATA[Drinks & Beverages]]></string>
    <string name="create_account">Create Account</string>
    <string name="drinks_milkshakes"><![CDATA[Drinks & MilkShakes]]></string>
    <string name="rate_service">Rate Service</string>
    <string name="how_was_your_experience_with_waiter">How was your experience with waiter</string>
    <string name="_24">#24?</string>
    <string name="any_comments">Any comments?</string>
    <string name="confirm_place_order"><![CDATA[Confirm & Place Order]]></string>
    <string name="no_ratings_yet">No ratings yet</string>
    <string name="order_status">Order Status</string>
    <string name="the_kitchen_has_recieved_your_takeaway_order">The kitchen has recieved your takeaway order.</string>
    <string name="no_active_orders_yet">No Active Orders yet</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="first_name">First Name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create_a_strong_password">Create a strong password</string>
    <string name="last_name">Last Name</string>
    <string name="last__name">Last Name</string>
    <string name="eg_guest_gmail_com">eg.guest@gmail.com</string>
    <string name="eg_the_organic_restaurant">eg.The Organic Restaurant...</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="open_now">OPEN NOW</string>
    <string name="secure_your_account">Secure Your Account</string>
    <string name="email_address">Email Address</string>
    <string name="john_d2d_com">john@D2D.com</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="new__password">New Password</string>
    <string name="secure_your_account_with_a_new_passkey">Secure your account with a new passkey.</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="i_read_the_terms_and_conditions">I read the terms and conditions</string>
    <string name="we_process_minimal_user_data_primarily_email_identifiers_solely_for_the_purpose_of_matching_users_with_their_active_fulfillment_requests">We process minimal user data (primarily email identifiers) solely for the purpose of matching users with their active fulfillment requests.</string>
    <string name="_5_data_privacy">5. Data Privacy</string>
    <string name="users_are_encouraged_to_share_their_service_experience_through_the_feedback_module_this_data_is_used_to_optimize_fulfillment_intelligence_and_service_quality">Users are encouraged to share their service experience through the feedback module. This data is used to optimize fulfillment intelligence and service quality.</string>
    <string name="_4_feedback_submission">4. Feedback Submission</string>
    <string name="all_orders_are_initialized_by_authorized_fulfillment_center_staff_the_system_provides_real_time_updates_as_the_order_transitions_from_pending_to_ready_and_collected_d2d_is_a_monitoring_tool_and_is_not_responsible_for_the_contents_or_timing_of_the_orders">All orders are initialized by authorized fulfillment center staff. The system provides real-time updates as the order transitions from PENDING to READY and COLLECTED. D2D is a monitoring tool and is not responsible for the contents or timing of the orders.</string>
    <string name="_3_order_tracking">3. Order Tracking</string>
    <string name="users_may_access_the_system_to_monitor_active_fulfillment_requests_unauthorized_attempts_to_access_administrative_functions_or_the_staff_portal_are_strictly_prohibited">Users may access the system to monitor active fulfillment requests. Unauthorized attempts to access administrative functions or the Staff Portal are strictly prohibited.</string>
    <string name="_2_user_conduct">2. User Conduct</string>
    <string name="the_d2d_ordering_system_is_a_specialized_interface_designed_for_tracking_order_status_and_providing_service_feedback_this_platform_does_not_facilitate_direct_order_placement_by_customers">The D2D Ordering System is a specialized interface designed for tracking order status and providing service feedback. This platform does not facilitate direct order placement by customers.</string>
    <string name="_1_service_description">1. Service Description</string>
    <string name="last_updated_april_29_2026">Last updated: April 29, 2026</string>
    <string name="initialize_order">Initialize Order</string>
    <string name="your_order_is_ready_to_be_placed">Your order is ready to be placed.</string>
    <string name="browse_restaurants">BROWSE RESTAURANTS</string>
</resources>