<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new__password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:fontFamily="@font/archivoblack"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secure_your_account_with_a_new_passkey"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:layout_marginTop="10dp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:background="@drawable/catagories"
        android:gravity="center"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="-85dp"
            />
        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/glass_white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@drawable/white_border_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="-35dp"
            />
        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/glass_white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@drawable/white_border_bg"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />
        <Button
            android:id="@+id/update_new_pass"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/update_password"
            android:textColor="@color/black"
            android:background="@drawable/btn_gradient_bg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
    </LinearLayout>
</LinearLayout>