<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Takeaway orders"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/burger_special"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"

            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:padding="3dp"

            android:scaleType="centerCrop"
            android:src="@drawable/burger_sp"
            app:srcCompat="@drawable/burger_sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="search"

            android:background="@drawable/catagories"
            android:inputType="textFilter"
            android:padding="10dp"

            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/search"

            android:textColor="@color/white"
            android:textSize="17sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="none">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/catagory_btn"
                    android:text="@string/frequent_order"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/catagory_btn"
                    android:text="@string/pizza"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/catagory_btn"
                    android:text="@string/burgers"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/catagory_btn"
                    android:text="@string/drinks"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/catagory_btn"
                    android:text="@string/dessert"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>
        </HorizontalScrollView>
        <!--Products-->

        <LinearLayout
            android:id="@+id/burger_container"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/catagories"
            android:orientation="horizontal"
            android:padding="12dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/product_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/spicy_burger" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/spicy_beef_burger"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="12dp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/r14_99"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/catagories"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/chicken_burger" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/juicy_chicken_burger"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/r24_99"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/catagories"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/classic_burger" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/_2_double_beef_burger"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/r39_99"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/catagories"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/black_burger" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/black_spicy_burger"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/r17_99"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>