<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/main"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_accout"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="29sp"
        android:paddingStart="75dp"
        android:paddingEnd="60dp"
        android:layout_marginTop="-0dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/please_fill_in_the_form_to_continue"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20sp"
        >

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Full Name"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="15sp"
    />

    <EditText
        android:id="@+id/fullname_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Tahbiseng Frozen"

        android:drawableStart="@drawable/outline_account_circle_24"
        android:textStyle="bold"
        android:autofillHints="fullname"
        android:drawableTint="#FFFF"
        android:hint="@string/fullname"

        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_bg"

        android:padding="@dimen/padding_standard"
        android:textColor="@color/white"
        android:textColorHint="#FFFF"

        android:layout_marginTop="5dp"
        android:drawablePadding="@dimen/drawable_padding"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="11sp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Email"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/signup_email_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="your.name@gmail.com"
            android:textColor="@color/white"

            android:drawableStart="@drawable/baseline_email_24"
            android:drawableTint="#FFFF"
            android:hint="@string/email"

            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_bg"

            android:textSize="12sp"
            android:padding="@dimen/padding_standard"
            android:textColorHint="#FFFF"

            android:layout_marginTop="5dp"
            android:drawablePadding="@dimen/drawable_padding"
            />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>
        
    <EditText
        android:id="@+id/signup_password_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Create a strong password"

        android:drawableEnd="@drawable/icons_eye"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:drawableTint="#FFFF"

        android:textStyle="bold"
        android:hint="@string/password"
        android:background="@drawable/edittext_bg"

        android:padding="@dimen/padding_standard"
        android:textColorHint="#FFFF"
        android:drawableStart="@drawable/baseline_lock_24"

        android:layout_marginTop="5dp"
        android:drawablePadding="@dimen/drawable_padding"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            />
        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Confirm your password"

            android:textSize="12sp"
            android:textColor="@color/white"
            android:drawableTint="#FFFF"

            android:textStyle="bold"
            android:hint="@string/password"
            android:background="@drawable/edittext_bg"

            android:padding="@dimen/padding_standard"
            android:textColorHint="#FFFF"
            android:drawableStart="@drawable/baseline_lock_24"

            android:drawableEnd="@drawable/icons_eye"
            android:layout_marginTop="5dp"
            android:drawablePadding="@dimen/drawable_padding"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <CheckBox
            android:id="@+id/terms_condions_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I agree to the "
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/terms_conditions"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_marginLeft="-7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms and Conditions"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:textSize="12sp"
            />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <Button
        android:id="@+id/signup_submit_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_standard"

        android:background="@drawable/btn_gradient_bg"
        android:textSize="18sp"
        android:text="@string/create_account"

        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@null"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="135dp"
            android:paddingEnd="1dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:textColor="@color/white"
        android:textStyle="bold"

        />
            <Button
                android:id="@+id/back_to_login_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/catagory_btn"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:paddingStart="-20dp"
                android:paddingEnd="1dp"
                />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>